[metadata]
name = SpecialModel
version = 0.0.2
author = Daniel Ben Yaacov
author_email = daniel.benyaacov@gmail.com
description = Dictionary Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanielBNY/SpecialModel
project_urls =
    Bug Tracker = https://github.com/DanielBNY/SpecialModel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
