[metadata]
name = Dict2Model
version = 0.0.22
author = Daniel Ben Yaacov
author_email = daniel.benyaacov@gmail.com
description = Dictionary to Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanielBNY/Dict2Model
project_urls =
    Bug Tracker = https://github.com/DanielBNY/Dict2Model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
